# -nanoGPT-in-Replit

./: .breakpoints  .replit  README.md  pyproject.toml  replit.nix
wandb/: latest-run
wandb/run-20230118_104214-0a5rt7lx/: run-0a5rt7lx.wandb
wandb/run-20230118_104214-0a5rt7lx/files/: config.yaml  wandb-metadata.json
wandb/run-20230118_104646-9vn49sf9/files/: config.yaml  wandb-metadata.json
wandb/run-20230118_105709-8ub8tt7t/files/: config.yaml  wandb-metadata.json
wandb/run-20230118_105848-8m8jf1kj/files/: config.yaml  wandb-metadata.json
wandb/run-20230118_112300-hh4phf30/: run-hh4phf30.wandb
wandb/run-20230118_112300-hh4phf30/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230118_114326-96fk6dcs/: run-96fk6dcs.wandb
wandb/run-20230118_114326-96fk6dcs/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20230118_115259-l6apgxb5/: run-l6apgxb5.wandb
wandb/run-20230118_120610-7pejoz8u/: run-7pejoz8u.wandb
wandb/run-20230118_121920-8itxqi2w/: run-8itxqi2w.wandb
wandb/run-20230118_122523-qsiqki58/: run-qsiqki58.wandb
wandb/run-20230118_135837-6790q2wh/: run-6790q2wh.wandb
wandb/run-20230118_140415-c2rbfvsg/: run-c2rbfvsg.wandb
wandb/run-20230118_140925-62afhsm8/: run-62afhsm8.wandb
wandb/run-20230118_141539-mgsa1shb/: run-mgsa1shb.wandb
wandb/run-20230118_143800-fy4liqyh/: run-fy4liqyh.wandb
wandb/run-20230118_154105-bocgwg86/: run-bocgwg86.wandb
wandb/run-20230118_184344-int8jbbm/: run-int8jbbm.wandb
wandb/run-20230125_214520-b45ibqqp/: run-b45ibqqp.wandb
(+121 files in other folders)
