[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
jax = "^0.3.13"
tensorflow = "2.9.3"
torch = "1.11.0"
datasets = "^2.8.0"
tqdm = "^4.64.1"
transformers = "^4.25.1"
wandb = "^0.13.9"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"